--- a/frontend/src/components/create-playlist/make-playlist/creation/playlist-information/styles.scss
+++ b/frontend/src/components/create-playlist/make-playlist/creation/playlist-information/styles.scss
@@ -6,3 +6,7 @@
 .playlist-name-input {
   margin-bottom: 10px;
 }
+
+.css-151xaom-placeholder {
+  white-space: nowrap;
+}
