--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -60,6 +60,19 @@
 .no-margin-top {
   margin-top: 0; }
 
+@media all and (max-width: 360px) {
+  .no-right-padding-mobile {
+    padding-right: 0; } }
+
+@media all and (max-width: 360px) {
+  .no-left-right-padding-mobile {
+    padding-right: 0;
+    padding-left: 0; } }
+
+@media all and (max-width: 360px) {
+  .no-right-padding-mobile {
+    padding-right: 0; } }
+
 .react-autosuggest__container {
   position: relative; }
 
@@ -107,6 +120,11 @@
 
 .react-autosuggest__suggestion--highlighted {
   background-color: #ddd; }
+
+@media all and (max-width: 360px) {
+  .no-left-right-padding-mobile {
+    padding-right: 0;
+    padding-left: 0; } }
 
 .center-button {
   display: flex;
@@ -652,6 +670,9 @@
 
 .playlist-name-input {
   margin-bottom: 10px; }
+
+.css-151xaom-placeholder {
+  white-space: nowrap; }
 
 .top-ten-item-wrapper {
   cursor: pointer;
